--- a/client/src/index.css
+++ b/client/src/index.css
@@ -113,6 +113,9 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    ::-webkit-scrollbar {
+      display: none;
+    }
   }
   body {
     @apply bg-background text-foreground;
