--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,6 +44,7 @@
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
+  --backgroundHeader: #f7f7f7;
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.141 0.005 285.823);
@@ -81,6 +82,7 @@
 
 .dark {
   --background: #161717;
+  --backgroundHeader: #222222;
   --foreground: oklch(0.985 0 0);
   --card: #161717;
   --card-foreground: oklch(0.985 0 0);
